--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Build
       run: |
         cd DiguWormhole && zip -q -r DiguWormhole.zip * && mv DiguWormhole.zip ../ && cd -
+        cd HiLinks && zip -q -r HiLinks.zip * && mv HiLinks.zip ../ && cd -
     - name: Upload DiguWormhole
       uses: WebFreak001/deploy-nightly@v1.2.0
       env:
@@ -25,4 +26,14 @@ jobs:
         release_id: 77482728
         asset_path: ./DiguWormhole.zip
         asset_name: DiguWormhole.zip
+        asset_content_type: application/zip
+    - name: Upload HiLinks
+      uses: WebFreak001/deploy-nightly@v1.2.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: https://uploads.github.com/repos/binjoo/typecho-plugins/releases/77482728/assets{?name,label}
+        release_id: 77482728
+        asset_path: ./HiLinks.zip
+        asset_name: HiLinks.zip
         asset_content_type: application/zip
